ASR: add /info API
